create ddq subgroup crud
