# routes/api.php
@@ -23,8 +23,16 @@ Route::middleware('scope.user')->group(function () {
     Route::get('/protected', function () {
         return response()->json(['message' => 'Access granted']);
     });
-    Route::apiResource('ddq-groups', CustomerDdqGroupController::class);
-    // Route::apiResource('ddq-subgroups', CustomerDdqSubGroupController::class);
+    Route::get('ddq-groups', [CustomerDdqGroupController::class, 'index']);
+    Route::post('ddq-groups', [CustomerDdqGroupController::class, 'store']);
+    Route::get('ddq-groups/{id}', [CustomerDdqGroupController::class, 'show']);
+    Route::put('ddq-groups/{id}', [CustomerDdqGroupController::class, 'update']);
+    Route::delete('ddq-groups/{id}', [CustomerDdqGroupController::class, 'destroy']);
+    Route::get('ddq-subgroups', [CustomerDdqSubGroupController::class, 'index']);
+    Route::post('ddq-subgroups', [CustomerDdqSubGroupController::class, 'store']);
+    Route::get('ddq-subgroups/{id}', [CustomerDdqSubGroupController::class, 'show']);
+    Route::put('ddq-subgroups/{id}', [CustomerDdqSubGroupController::class, 'update']);
+    Route::delete('ddq-subgroups/{id}', [CustomerDdqSubGroupController::class, 'destroy']);
     // Route::post('ddqs/approve/{id}', [CustomerDdqController::class, 'approve']);
     // Route::post('ddqs/decline/{id}', [CustomerDdqController::class, 'decline']);
     // // Route::get('ddqs/view/{customer_id}/{site_id}/{group_id}/{subgroup_id}', [CustomerDdqController::class, 'showDDQ']);
