# storage/api-docs/api-docs.json
@@ -10,7 +10,8 @@
                 "tags": [
                     "Customer DDQ Groups"
                 ],
-                "summary": "Get list of DDQ Groups",
+                "summary": "Get a list of DDQ Groups",
+                "description": "Fetches a list of all available DDQ groups.",
                 "operationId": "b6a08250aa114014b69aeb64586238c6",
                 "responses": {
                     "200": {
@@ -48,6 +49,7 @@
                     "Customer DDQ Groups"
                 ],
                 "summary": "Create a new DDQ Group",
+                "description": "Creates a new DDQ group with the provided title and status.",
                 "operationId": "fa87ce8d08a7a63bff96d03ba1b78fdf",
                 "requestBody": {
                     "required": true,
@@ -75,7 +77,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "DDQ Group created",
+                        "description": "DDQ Group created successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -108,11 +110,13 @@
                     "Customer DDQ Groups"
                 ],
                 "summary": "Get a specific DDQ Group by ID",
+                "description": "Fetches a DDQ group by its unique ID.",
                 "operationId": "8c1679f6445a954122fd0a41245c217b",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
+                        "description": "ID of the DDQ Group",
                         "required": true,
                         "schema": {
                             "type": "integer"
@@ -152,11 +156,13 @@
                     "Customer DDQ Groups"
                 ],
                 "summary": "Update a specific DDQ Group",
+                "description": "Updates a DDQ group with the specified ID using the provided data.",
                 "operationId": "5db1f4dc8d9f1598521a38629bbe1ece",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
+                        "description": "ID of the DDQ Group",
                         "required": true,
                         "schema": {
                             "type": "integer"
@@ -168,10 +174,6 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "title",
-                                    "status"
-                                ],
                                 "properties": {
                                     "title": {
                                         "type": "string",
@@ -189,7 +191,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "DDQ Group updated",
+                        "description": "DDQ Group updated successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -220,7 +222,262 @@
                     "Customer DDQ Groups"
                 ],
                 "summary": "Delete a specific DDQ Group",
+                "description": "Deletes the DDQ group with the specified ID.",
                 "operationId": "ad8dee8621c4cb18939db299d6150b2c",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the DDQ Group",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "DDQ Group deleted successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/ddq-subgroups": {
+            "get": {
+                "tags": [
+                    "Customer DDQ SubGroups"
+                ],
+                "summary": "Get list of DDQ SubGroups",
+                "operationId": "4b6f633d97e42aa8a48320a98532b30f",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/CustomerDdqSubGroup"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Customer DDQ SubGroups"
+                ],
+                "summary": "Create a new DDQ SubGroup",
+                "operationId": "0025c36252538d54f97d595788eddeb5",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "customer_ddq_group_id",
+                                    "title",
+                                    "status"
+                                ],
+                                "properties": {
+                                    "customer_ddq_group_id": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "title": {
+                                        "type": "string",
+                                        "example": "New SubGroup"
+                                    },
+                                    "status": {
+                                        "type": "boolean",
+                                        "example": true
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "DDQ SubGroup created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "": {
+                                            "$ref": "#/components/schemas/CustomerDdqSubGroup"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/ddq-subgroups/{id}": {
+            "get": {
+                "tags": [
+                    "Customer DDQ SubGroups"
+                ],
+                "summary": "Get a specific DDQ SubGroup by ID",
+                "operationId": "ea10dc6902a0f305f2f5e012c5fd8d1d",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "": {
+                                            "$ref": "#/components/schemas/CustomerDdqSubGroup"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Customer DDQ SubGroups"
+                ],
+                "summary": "Update a specific DDQ SubGroup",
+                "operationId": "8aae0cdb2da82d9c1ef055f5b8522026",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Updated SubGroup"
+                                    },
+                                    "status": {
+                                        "type": "boolean",
+                                        "example": false
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "DDQ SubGroup updated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "": {
+                                            "$ref": "#/components/schemas/CustomerDdqSubGroup"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Customer DDQ SubGroups"
+                ],
+                "summary": "Delete a specific DDQ SubGroup",
+                "operationId": "eb1b395005ed720b1b5862d473d36c82",
                 "parameters": [
                     {
                         "name": "id",
@@ -233,7 +490,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "DDQ Group deleted",
+                        "description": "DDQ SubGroup deleted",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -260,15 +517,99 @@
     },
     "components": {
         "schemas": {
-            "CustomerDdqGroup": {
+            "CustomerDdq": {
                 "properties": {
                     "id": {
                         "type": "integer",
                         "example": 1
                     },
+                    "data": {
+                        "type": "string",
+                        "example": "Sample data"
+                    },
+                    "customer_id": {
+                        "type": "integer",
+                        "example": 101
+                    },
+                    "customer_site_id": {
+                        "type": "integer",
+                        "example": 202
+                    },
+                    "group_id": {
+                        "type": "integer",
+                        "example": 303
+                    },
+                    "subgroup_id": {
+                        "type": "integer",
+                        "example": 404
+                    },
+                    "document_type": {
+                        "type": "string",
+                        "enum": [
+                            "string",
+                            "file"
+                        ],
+                        "example": "string"
+                    },
+                    "created_by_user_id": {
+                        "type": "integer",
+                        "example": 505
+                    },
+                    "created_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "type": "string",
+                        "format": "date-time"
+                    }
+                },
+                "type": "object"
+            },
+            "CustomerDdqGroup": {
+                "title": "Customer DDQ Group",
+                "properties": {
+                    "id": {
+                        "description": "ID of the DDQ Group",
+                        "type": "integer",
+                        "example": 1
+                    },
                     "title": {
+                        "description": "Title of the DDQ Group",
                         "type": "string",
                         "example": "Group Title"
+                    },
+                    "status": {
+                        "description": "Status of the DDQ Group",
+                        "type": "boolean",
+                        "example": true
+                    },
+                    "created_at": {
+                        "description": "Creation date of the DDQ Group",
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "description": "Last update date of the DDQ Group",
+                        "type": "string",
+                        "format": "date-time"
+                    }
+                },
+                "type": "object"
+            },
+            "CustomerDdqSubGroup": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "customer_ddq_group_id": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "title": {
+                        "type": "string",
+                        "example": "Subgroup Title"
                     },
                     "status": {
                         "type": "boolean",
@@ -291,6 +632,10 @@
         {
             "name": "Customer DDQ Groups",
             "description": "Customer DDQ Groups"
+        },
+        {
+            "name": "Customer DDQ SubGroups",
+            "description": "Customer DDQ SubGroups"
         }
     ]
 }
